<resources>
    <string name="app_name">RPM Presensi</string>
    <string name="welcome">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign">Sign Up</string>
    <string name="change_device">Anda ingin ganti perangkat ?</string>
    <string name="change_device2">Klik untuk Ganti Perangkat</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone Number</string>
    <string name="regis">REGISTER</string>
    <string name="login">Login</string>
    <string name="silahkan_tunggu">Silahkan Tunggu</string>
    <string name="home">Home</string>
    <string name="presensi">Data Master</string>
    <string name="laporan">Laporan</string>
    <string name="abensi">Absensi</string>
    <string name="account">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi,</string>
    <string name="vinita">Vinita</string>
    <string name="welcome_back">Selamat Datang</string>
    <string name="kehadiran_mu_sebulan_ini">Kehadiran mu sebulan ini</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="vinita_sandri">Vinita Sandri</string>
    <string name="vinita_email">vinitasandri@gmail.com</string>
    <string name="id">100000</string>
    <string name="no_telepon">No Telepon</string>
    <string name="date">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="update">Update Profile</string>
    <string name="simpan">Simpan</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nik">NIK KTP</string>
    <string-array name="alasan">
        <item>-- Pilih Alasan --</item>
        <item>Sakit</item>
        <item>Izin Lainnya</item>
    </string-array>
</resources>
