<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.absensi.ui.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginTop="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        android:src="@drawable/ic_undraw_secure_login_pdn4"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginTop="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:fontFamily="@font/capriola" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/margin_activity"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        android:background="@drawable/bg_edt"
        android:hint="No Pegawai"
        android:paddingLeft="@dimen/margin_activity"
        android:textColorHint="@color/text_colorlogin"
        android:inputType="text"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextFields"
        android:id="@+id/edt_nopegawai"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/edt_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/margin_activity_small"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        android:background="@drawable/bg_edt"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:paddingLeft="@dimen/margin_activity"
        android:textColorHint="@color/text_colorlogin"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_activity"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        >
        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap,UnusedAttribute" />

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="80dp"
            android:layout_height="40dp"
            tools:ignore="ContentDescription,HardcodedText,RelativeOverlap,RtlCompat,RtlHardcoded"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btnlogin"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_device"
        android:textColor="@color/text_colorlogin"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin_activity"
        android:fontFamily="@font/capriola"
        />
    <TextView
        android:id="@+id/tv_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_device2"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_activity_small"
        android:textSize="14sp"
        android:fontFamily="@font/capriola"
        />

</LinearLayout>