<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:elevation="0dp"
            >
            <include layout="@layout/toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>



        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginLeft="@dimen/margin_activity"
            android:layout_marginTop="@dimen/margin_activity"
            android:background="@drawable/card_settings"
            app:cardElevation="0dp"
            android:id="@+id/card_email"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/margin_activity"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/low_grey" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginLeft="@dimen/margin_activity"
            android:layout_marginTop="@dimen/margin_activity"
            android:background="@drawable/card_settings"
            app:cardElevation="0dp"
            android:id="@+id/card_password"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/margin_activity"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/low_grey" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_activity"
            android:layout_marginLeft="@dimen/margin_activity"
            android:layout_marginTop="@dimen/margin_activity"
            android:background="@drawable/card_settings"
            app:cardElevation="0dp"
            android:id="@+id/card_logout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/margin_activity"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                tools:ignore="RtlCompat,RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/low_grey" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>