<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray2"
    android:orientation="vertical"
    tools:context=".ui.profile.activity.UpdateProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp"
        >
        <include layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/container_profile"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/images"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/edit"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/images"
            android:layout_alignParentRight="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </RelativeLayout>

    <EditText
        android:enabled="false"
        android:id="@+id/edt_idpegawai"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_input_disable"
        android:drawableLeft="@drawable/ic_idpegawai"
        android:drawablePadding="26dp"
        android:hint="ID Pegawai"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded, RtlSymmetry"

        />

    <EditText
        android:id="@+id/edt_notelepon"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_btnupdate"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawablePadding="26dp"
        android:hint="No Telepon"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded, RtlSymmetry" />

    <EditText
        android:id="@+id/edt_tgllahir"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_btnupdate"
        android:drawableLeft="@drawable/ic_calendar_today_24"
        android:drawablePadding="26dp"
        android:hint="Tanggal Lahir"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded, RtlSymmetry" />

    <EditText
        android:id="@+id/edt_jeniskelamin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_btnupdate"
        android:drawableLeft="@drawable/ic_gender"
        android:drawablePadding="26dp"
        android:hint="Jenis Kelamin"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded, RtlSymmetry"/>

    <EditText
        android:id="@+id/edt_alamat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/bg_btnupdate"
        android:drawableLeft="@drawable/ic_home_work_24"
        android:drawablePadding="26dp"
        android:hint="Alamat"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded, RtlSymmetry" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_activity"
        android:layout_marginTop="@dimen/margin_activity"
        android:layout_marginEnd="@dimen/margin_activity"
        android:background="@drawable/bg_btnsubmit"
        android:text="@string/simpan"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>